Folder_CSS/style.css
/* ... */
.Class_TopCells{
   outline: none;
   min-width: auto;
   min-height: calc(95% / 7);
   border-left: dashed .15rem var(--base-border);
   background-color: var(--base-colour);
   z-index: -1;
   cursor: pointer;
}

#ID_C1R1{
   border-left: none;
}

.Class_Cells{
   min-width: calc(90% / 7);
   min-height: calc(90% / 7);
   border: solid .2rem var(--gameboard);
   border-radius: 10rem;
   background-color: var(--base-border);
   opacity: .7;
   justify-content: center;
   align-content: center;
}

/* Game Screen Gameboard Classes */ 

.Class_Main_Wrapper_InGame{

}

.Class_Gameboard_Wrapper_InGame{
   margin-top: 10vh;
}

.Class_Turn_Players{
   min-width: 100%;
   min-height: 100%;
   margin-bottom: 3%;
   margin-top: 3%;
   text-align: center;
   justify-content: center;
   align-content: center;
}

.Class_Thinking{
   text-align: center;
   font-size: 3rem;
}

.Class_Left_Pos{
   position: absolute;
   left: 3%;
}

.Class_Right_Pos{
   position: absolute;
   right: 3%;
}

/* #endregion */

/* #region Settings Menu */                                                                                                                                                                                                                                                                               
                                                                                                                                                                                                                                                                          /*
================================================================================================================================================================================================================================================================================
                            
                                               Settings Menu       

===============================================================================================================================================================================================================================================================================*/

                              /* Settings SVG Button */
#ID_Settings{
   width: 2rem;
   height: 2rem;
   position: absolute;
   right: 0;
   top: 1.35vh;
   filter: invert(1);
}

#ID_Settings:hover {

}

                              /*  Settings menu     */ 

.Class_Settings_Menu{
   position: absolute;
   top: 0;
   z-index: 2;
   opacity: 0;
   right: -25vw;
   min-height: 100vh;
   width:clamp(300px, 20%, 25vw);    
   background-color: var(--base-border);
   box-shadow: inset .1rem .1rem 2rem black;
   color: var(--main-black);
   text-align: center;
   line-height: 0;
}


.Class_Showing_Settings{
   animation: Show_Settings_Animation .1s ease-in;
   animation-fill-mode: forwards;
   animation-iteration-count: 1;
}

@keyframes Show_Settings_Animation {
from{
   opacity: 0;
   right: -25vw;
}
to{
   opacity: 1;
   right: 0;
 
}
}

.Class_Hide_Settings{
   animation: Hide_Settings_Animation .1s ease-out;
   animation-fill-mode: forwards;
   animation-iteration-count: 1
}
@keyframes Hide_Settings_Animation {
from{
   right: 0vw;
   opacity: 1;
}
to{
   opacity: 0;
   right: -25vw;
 
}
}

#ID_Setting_Span{
   display: grid;
   grid: repeat(8, 1fr) / 1fr;   
   flex-wrap: wrap;
   width: 100vw;
   height: 100vh;
   max-width:100%;
   justify-content:center;
   text-align: center;
   overflow:scroll
}

#ID_Info_Container{
   min-width: 100%;
   border-bottom: dashed 2px var(--base-colour);
   display: flex;
   align-items: center;
}

#ID_Colour_Container{
   min-width: 100%;
   border-bottom: dashed 2px var(--base-colour);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
}

#ID_Sound_Container{
   min-width: 100%;
   border-bottom: dashed 2px var(--base-colour);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
}

#ID_Language_Container{
   min-width: 100%;
   border-bottom: dashed 2px var(--base-colour);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
}

#ID_Stats_Container{
   min-width: 100%;
   border-bottom: dashed 2px var(--base-colour);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
}

#ID_Contacts_Container{
   min-width: 100%;
   border-bottom: dashed 2px var(--base-colour);
   display: flex;
   align-items: center;
}

#ID_Credits_Container{
   min-width: 100%;
   border-bottom: dashed 2px var(--base-colour);
   display: flex;
   align-items: center;
}

#ID_Delete_All_Container{
   min-width: 100%;
   min-height: 10vh;
   display: flex;
   align-items: center;
   justify-content: center;
}

                              /*  Settings-Menu Typography Styling */
#ID_Info{
   cursor: pointer;
   min-width: 100%;
   color: var(--main-red);
}

#ID_Label_Colour{
   cursor: pointer;
   min-width: 100%;
}

#ID_Sound{
   cursor: pointer;
   min-width: 100%;
}

#ID_Language{
   cursor: pointer;
   min-width: 100%;
}

#ID_Language_Menu{
   cursor: pointer;
   min-width: 100%;
}

#ID_Stats{
   cursor: pointer;
   min-width: 100%;
}

#ID_Contact{
   cursor: pointer;
   min-width: 100%;
}

#ID_Credits{
   cursor: pointer;
   min-width: 100%;
}

#ID_Delete_All{
   cursor: pointer;
   height: 1.5rem;
   width: 8rem;
}

#ID_Info:hover{
   color: var(--gameboard-border);
}
#ID_Label_Colour:hover{
   color: var(--gameboard-border);
}

#ID_Sound:hover{
   color: var(--gameboard-border);
}

#ID_Language:hover{
   color: var(--gameboard-border);
}

#ID_Stats:hover{
   color: var(--gameboard-border);
}

#ID_Contact:hover{
   color: var(--gameboard-border);
}

#ID_Credits:hover{
   color: var(--gameboard-border);
}


.Class_Summary_Details:hover{
   color: var(--main-red);
   cursor: pointer;
}
/* ... */

